src/objects/ChargeInfo__c.object
<CustomObject>
    <description>販売手数料、カード手数料情報格納</description>
    <fields>
        <fullName>AccountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会社名(取引先)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>手数料</relationshipLabel>
        <relationshipName>ChargeAccountRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CategoryMain__c</fullName>
        <description>旅行会社の手数料情報を登録のとき、「AGT」を設定
カードの手数料情報を登録のとき、「カード」を設定</description>
        <inlineHelpText>旅行会社の手数料情報を登録のとき、「AGT」を設定
カードの手数料情報を登録のとき、「カード」を設定</inlineHelpText>
        <label>カテゴリ1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategorySub__c</fullName>
        <label>カテゴリ2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayChargeFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>手数料支払</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesRate__c</fullName>
        <label>販売手数料/カード手数料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <externalId>true</externalId>
        <label>#Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <label>AGT名/カード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>手数料</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>CH-{00000000}</displayFormat>
        <label>番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>